--- a/diffusion_policy/config/task/lift_image.yaml
+++ b/diffusion_policy/config/task/lift_image.yaml
@@ -3,11 +3,14 @@ name: lift_image
 shape_meta: &shape_meta
   # acceptable types: rgb, low_dim
   obs:
+    frontview_image:
+      shape: [3, 128, 128]
+      type: rgb
     agentview_image:
-      shape: [3, 84, 84]
+      shape: [3, 128, 128]
       type: rgb
     robot0_eye_in_hand_image:
-      shape: [3, 84, 84]
+      shape: [3, 128, 128]
       type: rgb
     robot0_eef_pos:
       shape: [3]
@@ -21,7 +24,8 @@ shape_meta: &shape_meta
 
 task_name: &task_name lift
 dataset_type: &dataset_type ph
-dataset_path: &dataset_path data/robomimic/datasets/${task.task_name}/${task.dataset_type}/image.hdf5
+# dataset_path: &dataset_path data/robomimic/datasets/${task.task_name}/${task.dataset_type}/image.hdf5
+dataset_path: &dataset_path data/robomimic/datasets/lift/obs/lift_200.hdf5
 abs_action: &abs_action False
 
 env_runner:
@@ -61,4 +65,5 @@ dataset:
   use_legacy_normalizer: False
   use_cache: True
   seed: 42
-  val_ratio: 0.02
+  #val_ratio: 0.02
+  val_ratio: 0.1
