--- a/diffusion_policy/config/train_diffusion_unet_hybrid_workspace.yaml
+++ b/diffusion_policy/config/train_diffusion_unet_hybrid_workspace.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - task: lift_image_abs
+  - task: lift_image
 
 name: train_diffusion_unet_hybrid
 _target_: diffusion_policy.workspace.train_diffusion_unet_hybrid_workspace.TrainDiffusionUnetHybridWorkspace
