--- a/diffusion_policy/config/task/lift_image.yaml
+++ b/diffusion_policy/config/task/lift_image.yaml
@@ -3,24 +3,24 @@ name: lift_image
 shape_meta: &shape_meta
   # acceptable types: rgb, low_dim
   obs:
-    # frontview_image:
-    #   shape: [3, 128, 128]
-    #   type: rgb
-    frontview_rgbd:
-      shape: [4, 128, 128]
-      type: rgbd
-    # agentview_image:
-    #   shape: [3, 128, 128]
-    #   type: rgb
-    agentview_rgbd:
-      shape: [4, 128, 128]
-      type: rgbd
-    # sideview_image:
-    #   shape: [3, 128, 128]
-    #   type: rgb
-    sideview_rgbd:
-      shape: [4, 128, 128]
-      type: rgbd
+    frontview_image:
+      shape: [3, 128, 128]
+      type: rgb
+    # frontview_rgbd:
+    #   shape: [4, 128, 128]
+    #   type: rgbd
+    agentview_image:
+      shape: [3, 128, 128]
+      type: rgb
+    # agentview_rgbd:
+    #   shape: [4, 128, 128]
+    #   type: rgbd
+    sideview_image:
+      shape: [3, 128, 128]
+      type: rgb
+    # sideview_rgbd:
+    #   shape: [4, 128, 128]
+    #   type: rgbd
     robot0_eye_in_hand_image:
       shape: [3, 128, 128]
       type: rgb
@@ -32,13 +32,14 @@ shape_meta: &shape_meta
     robot0_gripper_qpos:
       shape: [2]
   action: 
-    shape: [7]
+    shape: [512]
+    # shape: [7]
 
 task_name: &task_name lift
 dataset_type: &dataset_type ph
 # dataset_path: &dataset_path data/robomimic/datasets/${task.task_name}/${task.dataset_type}/image.hdf5
 dataset_path: &dataset_path data/robomimic/datasets/lift/obs/lift_200.hdf5
-val_dataset_path: &val_dataset_path data/robomimic/datasets/lift/obs/lift_200_val.hdf5
+val_dataset_path: &val_dataset_path data/robomimic/datasets/lift/obs/lift_200.hdf5
 abs_action: &abs_action False
 
 env_runner:
@@ -80,4 +81,4 @@ dataset:
   use_cache: True
   seed: 42
   #val_ratio: 0.02
-  val_ratio: 0.1
+  val_ratio: 0.01
