--- a/diffusion_policy/config/train_diffusion_unet_image_workspace.yaml
+++ b/diffusion_policy/config/train_diffusion_unet_image_workspace.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - task: lift_image
+  - task: square_image_abs
 
 name: train_diffusion_unet_image
 _target_: diffusion_policy.workspace.train_diffusion_unet_image_workspace.TrainDiffusionUnetImageWorkspace
