--- a/diffusion_policy/config/train_diffusion_unet_image_workspace.yaml
+++ b/diffusion_policy/config/train_diffusion_unet_image_workspace.yaml
@@ -129,10 +129,10 @@ logging:
 
 checkpoint:
   topk:
-    monitor_key: test_mean_score
+    monitor_key: "IIWA_test_mean_score"
     mode: max
     k: 5
-    format_str: 'epoch={epoch:04d}-test_mean_score={test_mean_score:.3f}.ckpt'
+    format_str: 'epoch={epoch:04d}-IIWA_test_mean_score={IIWA_test_mean_score:.3f}.ckpt'
   save_last_ckpt: True
   save_last_snapshot: False
 
