--- a/requirements.txt
+++ b/requirements.txt
@@ -1,224 +1,227 @@
-absl-py @ file:///home/conda/feedstock_root/build_artifacts/absl-py_1705494584803/work
-accelerate @ file:///home/conda/feedstock_root/build_artifacts/accelerate_1666118548313/work
--e git+ssh://git@github.com/yilongsong/action_extractor.git@b86d572a902698a415a66eeda93d56a1e76f1894#egg=action_extractor
-aiohappyeyeballs @ file:///home/conda/feedstock_root/build_artifacts/aiohappyeyeballs_1724167852130/work
-aiohttp @ file:///home/conda/feedstock_root/build_artifacts/aiohttp_1726062772405/work
+absl-py==2.1.0
+accelerate==0.13.2
+action_extractor==0.1.0
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
 aiohttp-cors==0.7.0
-aiosignal @ file:///home/conda/feedstock_root/build_artifacts/aiosignal_1667935791922/work
+aiosignal==1.3.1
 annotated-types==0.7.0
-antlr4-python3-runtime @ file:///home/conda/feedstock_root/build_artifacts/antlr-python-runtime-meta_1638309185939/work
+antlr4-python3-runtime==4.9.3
 asciitree==0.3.3
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
-async-timeout @ file:///home/conda/feedstock_root/build_artifacts/async-timeout_1691763562544/work
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1722977137225/work
-av @ file:///home/conda/feedstock_root/build_artifacts/av_1666093218134/work
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==24.2.0
+av==10.0.0
 beautifulsoup4==4.12.3
 blessed==1.20.0
-blinker @ file:///home/conda/feedstock_root/build_artifacts/blinker_1715091184126/work
-boto3 @ file:///home/conda/feedstock_root/build_artifacts/boto3_1666403663153/work
-botocore @ file:///home/conda/feedstock_root/build_artifacts/botocore_1666397492967/work
-Brotli @ file:///home/conda/feedstock_root/build_artifacts/brotli-split_1687884021435/work
-cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
-cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1724028158384/work
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1725278078093/work/certifi
-cffi @ file:///home/conda/feedstock_root/build_artifacts/cffi_1695367051161/work
+blinker==1.8.2
+boto3==1.24.96
+botocore==1.27.96
+Brotli==1.0.9
+cached-property==1.5.2
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.15.1
 chardet==5.2.0
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1698833585322/work
-click @ file:///home/conda/feedstock_root/build_artifacts/click_1645238100595/work
-cloudpickle @ file:///home/conda/feedstock_root/build_artifacts/cloudpickle_1697464713350/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+charset-normalizer==3.3.2
+click==8.0.4
+cloudpickle==3.0.0
+colorama==0.4.6
 colorful==0.5.6
-contourpy @ file:///home/conda/feedstock_root/build_artifacts/contourpy_1725378311727/work
-cryptography @ file:///home/conda/feedstock_root/build_artifacts/cryptography-split_1706658593956/work
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1696677705766/work
-Cython @ file:///home/conda/feedstock_root/build_artifacts/cython_1666736972566/work
-cytoolz @ file:///home/conda/feedstock_root/build_artifacts/cytoolz_1706897086113/work
-dask @ file:///home/conda/feedstock_root/build_artifacts/dask-core_1698445485774/work
-dataclasses @ file:///home/conda/feedstock_root/build_artifacts/dataclasses_1628958434797/work
-datasets @ file:///home/conda/feedstock_root/build_artifacts/datasets_1665795038654/work
-debugpy @ file:///home/conda/feedstock_root/build_artifacts/debugpy_1725269177804/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-diffusers @ file:///home/conda/feedstock_root/build_artifacts/diffusers_1671577388141/work
-dill @ file:///home/conda/feedstock_root/build_artifacts/dill_1653058582944/work
+contourpy==1.3.0
+cryptography==42.0.2
+cycler==0.12.1
+Cython==0.29.32
+cytoolz==0.12.3
+dask==2023.10.1
+dataclasses==0.8
+datasets==2.6.1
+debugpy==1.8.5
+decorator==5.1.1
+diffusers==0.11.1
+dill==0.3.5.1
 distlib==0.3.8
 dm-control==1.0.9
 dm-env==1.6
 dm-tree==0.1.8
 docker-pycreds==0.4.0
 egl_probe==1.0.2
-einops @ file:///home/conda/feedstock_root/build_artifacts/einops_1646391317704/work
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
+einops==0.4.1
+entrypoints==0.4
 etils==1.5.2
 evdev==1.7.1
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
+exceptiongroup==1.2.2
+executing==2.1.0
 fasteners==0.15
-filelock @ file:///home/conda/feedstock_root/build_artifacts/filelock_1726613473834/work
-fonttools @ file:///home/conda/feedstock_root/build_artifacts/fonttools_1727125695608/work
+filelock==3.16.1
+fonttools==4.54.0
 free-mujoco-py==2.1.6
-frozenlist @ file:///home/conda/feedstock_root/build_artifacts/frozenlist_1725395644230/work
-fsspec @ file:///home/conda/feedstock_root/build_artifacts/fsspec_1725543257300/work
-fvcore @ file:///home/conda/feedstock_root/build_artifacts/fvcore_1671623667463/work
+frozenlist==1.4.1
+fsspec==2024.9.0
+fvcore==0.1.5.post20221221
 gdown==5.2.0
-gitdb @ file:///home/conda/feedstock_root/build_artifacts/gitdb_1697791558612/work
-GitPython @ file:///home/conda/feedstock_root/build_artifacts/gitpython_1711991025291/work
+gitdb==4.0.11
+GitPython==3.1.43
 glfw==1.12.0
 google-api-core==2.20.0
-google-auth @ file:///home/conda/feedstock_root/build_artifacts/google-auth_1726832896641/work
-google-auth-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/google-auth-oauthlib_1630497468950/work
+google-auth==2.35.0
+google-auth-oauthlib==0.4.6
 googleapis-common-protos==1.63.1
 gpustat==1.1.1
-grpcio @ file:///home/conda/feedstock_root/build_artifacts/grpc-split_1655728589643/work
-gym @ file:///home/conda/feedstock_root/build_artifacts/gym_1644328750340/work
-h5py @ file:///home/conda/feedstock_root/build_artifacts/h5py_1666830834012/work
-huggingface_hub @ file:///home/conda/feedstock_root/build_artifacts/huggingface_hub_1727125185975/work
-hydra-core @ file:///home/conda/feedstock_root/build_artifacts/hydra-core_1656547002749/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1726459485162/work
+grpcio==1.46.3
+gym==0.21.0
+h5py==3.7.0
+huggingface_hub==0.25.1
+hydra-core==1.2.0
+idna==3.10
 imagecodecs==2022.9.26
-imageio @ file:///home/conda/feedstock_root/build_artifacts/imageio_1663572338894/work
-imageio-ffmpeg @ file:///home/conda/feedstock_root/build_artifacts/imageio-ffmpeg_1649960641006/work
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work
-importlib_resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1725921340658/work
-iopath @ file:///home/conda/feedstock_root/build_artifacts/iopath_1723846728822/work
-ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1666723258080/work
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1701831663892/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-jmespath @ file:///home/conda/feedstock_root/build_artifacts/jmespath_1655568249366/work
+imageio==2.22.0
+imageio-ffmpeg==0.4.7
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+iopath==0.1.10
+ipykernel==6.16.2
+ipython==8.18.1
+jedi==0.19.1
+jmespath==1.0.1
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1710257447442/work
-kiwisolver @ file:///home/conda/feedstock_root/build_artifacts/kiwisolver_1725459266648/work
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.7
 labmaze==1.0.6
 llvmlite==0.36.0
-locket @ file:///home/conda/feedstock_root/build_artifacts/locket_1650660393415/work
+locket==1.0.0
 lxml==5.3.0
-Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1710435156458/work
-MarkupSafe @ file:///home/conda/feedstock_root/build_artifacts/markupsafe_1724959465445/work
+Markdown==3.6
+MarkupSafe==2.1.5
 matplotlib==3.9.2
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
--e git+https://github.com/NVlabs/mimicgen.git@5faf556e7732350ee04817734ec8eef6eaf040d2#egg=mimicgen
+matplotlib-inline==0.1.7
+mimicgen==1.0.0
 monotonic==1.6
-msgpack @ file:///home/conda/feedstock_root/build_artifacts/msgpack-python_1725975012026/work
+msgpack==1.1.0
 mujoco==3.2.3
 mujoco-py==2.1.2.14
-multidict @ file:///home/conda/feedstock_root/build_artifacts/multidict_1725953652790/work
-multiprocess @ file:///home/conda/feedstock_root/build_artifacts/multiprocess_1666862304842/work
+multidict==6.1.0
+multiprocess==0.70.14
 munkres==1.1.4
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-networkx @ file:///home/conda/feedstock_root/build_artifacts/networkx_1698504735452/work
+nest_asyncio==1.6.0
+networkx==3.2.1
 numba==0.53.1
-numcodecs @ file:///home/conda/feedstock_root/build_artifacts/numcodecs_1659408295431/work
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1662888870462/work
+numcodecs==0.10.2
+numpy==1.23.3
 nvidia-ml-py==12.560.30
-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/oauthlib_1666056362788/work
-omegaconf @ file:///home/conda/feedstock_root/build_artifacts/omegaconf_1669157093953/work
+oauthlib==3.2.2
+omegaconf==2.2.3
 opencensus==0.11.4
 opencensus-context==0.1.3
 opencv-python==4.6.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
-pandas @ file:///home/conda/feedstock_root/build_artifacts/pandas_1726878406085/work
+packaging==24.1
+pandas==2.2.3
 parameterized==0.9.0
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-partd @ file:///home/conda/feedstock_root/build_artifacts/partd_1715026491486/work
+parso==0.8.4
+partd==1.4.2
 pathtools==0.1.2
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow @ file:///home/conda/feedstock_root/build_artifacts/pillow_1666920578599/work
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
-ply @ file:///home/conda/feedstock_root/build_artifacts/ply_1712242996588/work
-portalocker @ file:///home/conda/feedstock_root/build_artifacts/portalocker_1720928539791/work
+pexpect==4.9.0
+pickleshare==0.7.5
+Pillow==9.2.0
+pip==22.2.2
+platformdirs==4.3.6
+ply==3.11
+portalocker==2.10.1
 prometheus-client==0.13.1
-promise @ file:///home/conda/feedstock_root/build_artifacts/promise_1725358037142/work
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1718047967974/work
+promise==2.3
+prompt_toolkit==3.0.47
 proto-plus==1.24.0
 protobuf==3.19.6
-psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1662356159478/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
+psutil==5.9.2
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py-spy==0.3.14
 pyarrow==8.0.0
-pyasn1 @ file:///home/conda/feedstock_root/build_artifacts/pyasn1_1726839225972/work
-pyasn1_modules @ file:///home/conda/feedstock_root/build_artifacts/pyasn1-modules_1726029546107/work
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pybullet-svl==3.1.6.4
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1711811537435/work
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 pygame==2.1.2
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
-PyJWT @ file:///home/conda/feedstock_root/build_artifacts/pyjwt_1722701264352/work
-pymunk @ file:///home/conda/feedstock_root/build_artifacts/pymunk_1667249937494/work
+Pygments==2.18.0
+PyJWT==2.9.0
+pymunk==6.2.1
 pynput==1.7.7
 PyOpenGL==3.1.7
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1722587090966/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1724616129934/work
+pyOpenSSL==24.2.1
+pyparsing==3.1.4
 PyQt5==5.15.7
 PyQt5-sip==12.11.0
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+PySocks==1.7.1
+python-dateutil==2.9.0
 python-xlib==0.33
 pytorch3d==0.7.0
 pytorchvideo==0.1.5
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1706886791323/work
-pyu2f @ file:///home/conda/feedstock_root/build_artifacts/pyu2f_1604248910016/work
+pytz==2024.1
+pyu2f==0.1.5
 PyWavelets==1.6.0
-PyYAML @ file:///home/conda/feedstock_root/build_artifacts/pyyaml_1725456176299/work
-pyzmq @ file:///home/conda/feedstock_root/build_artifacts/pyzmq_1725430390447/work
-r3m @ https://github.com/facebookresearch/r3m/archive/b2334e726887fa0206962d7984c69c5fb09cceab.tar.gz
+PyYAML==6.0.2
+pyzmq==26.2.0
+r3m==0.0.0
 ray==2.2.0
 referencing==0.35.1
-regex @ file:///home/conda/feedstock_root/build_artifacts/regex_1726095569724/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1717057054362/work
-requests-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/requests-oauthlib_1711290127547/work
-responses @ file:///home/conda/feedstock_root/build_artifacts/responses_1643839609465/work
+regex==2024.9.11
+requests==2.32.3
+requests-oauthlib==2.0.0
+responses==0.18.0
 robomimic==0.2.0
--e git+ssh://git@github.com/yilongsong/robosuite.git@52cb3fb497f094f377b9d2096e054d4716cf420c#egg=robosuite
--e git+https://github.com/ARISE-Initiative/robosuite-task-zoo@74eab7f88214c21ca1ae8617c2b2f8d19718a9ed#egg=robosuite_task_zoo
+robosuite==1.4.1
+robosuite_task_zoo==0.1
 rpds-py==0.20.0
-rsa @ file:///home/conda/feedstock_root/build_artifacts/rsa_1658328885051/work
-s3transfer @ file:///home/conda/feedstock_root/build_artifacts/s3transfer_1692149178344/work
-scikit-image @ file:///home/conda/feedstock_root/build_artifacts/scikit-image_1667117163409/work
+rsa==4.9
+s3transfer==0.6.2
+scikit-image==0.19.3
 scikit-video==1.1.11
 scipy==1.9.1
 seaborn==0.13.2
-sentry-sdk @ file:///home/conda/feedstock_root/build_artifacts/sentry-sdk_1725908075883/work
-setproctitle @ file:///home/conda/feedstock_root/build_artifacts/setproctitle_1724961209220/work
-Shapely @ file:///home/conda/feedstock_root/build_artifacts/shapely_1660800423466/work
-shortuuid @ file:///home/conda/feedstock_root/build_artifacts/shortuuid_1710251434066/work
-sip @ file:///home/conda/feedstock_root/build_artifacts/sip_1697300422453/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+sentry-sdk==2.14.0
+setproctitle==1.3.3
+setuptools==74.1.2
+Shapely==1.8.4
+shortuuid==1.0.13
+sip==6.7.12
+six==1.16.0
 smart-open==7.0.4
-smmap @ file:///home/conda/feedstock_root/build_artifacts/smmap_1634310307496/work
+smmap==5.0.0
 soupsieve==2.6
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-tabulate @ file:///home/conda/feedstock_root/build_artifacts/tabulate_1665138452165/work
-tensorboard @ file:///home/conda/feedstock_root/build_artifacts/tensorboard_1664238338171/work/tensorboard-2.10.1-py3-none-any.whl
-tensorboard-data-server @ file:///home/conda/feedstock_root/build_artifacts/tensorboard-data-server_1670043784580/work/tensorboard_data_server-0.6.1-py3-none-manylinux2010_x86_64.whl
-tensorboard-plugin-wit @ file:///home/conda/feedstock_root/build_artifacts/tensorboard-plugin-wit_1641458951060/work/tensorboard_plugin_wit-1.8.1-py3-none-any.whl
-tensorboardX @ file:///home/conda/feedstock_root/build_artifacts/tensorboardx_1654638215170/work
-termcolor @ file:///home/conda/feedstock_root/build_artifacts/termcolor_1662985294144/work
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1643647933166/work
-tifffile @ file:///home/conda/feedstock_root/build_artifacts/tifffile_1665588749940/work
-toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
-toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1706112571092/work
+stack-data==0.6.2
+tabulate==0.9.0
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorboardX==2.5.1
+termcolor==2.0.1
+threadpoolctl==3.1.0
+tifffile==2022.10.10
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.1
 torch==1.12.1
--e git+https://github.com/hassony2/torch_videovision.git@785a810d1df2ccab6901fb98b38e358433e7b17a#egg=torchvideotransforms
+torchvideotransforms==0.1.2
 torchvision==0.13.1
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1724955920300/work
-tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1662214488106/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
-tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1727140567071/work
-unicodedata2 @ file:///home/conda/feedstock_root/build_artifacts/unicodedata2_1695847984941/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1718728347128/work
+tornado==6.4.1
+tqdm==4.64.1
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.2
+unicodedata2==15.1.0
+urllib3==1.26.19
 virtualenv==20.26.5
-wandb @ file:///home/conda/feedstock_root/build_artifacts/wandb_1665080901245/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1724330738730/work
+wandb==0.13.3
+wcwidth==0.2.13
+Werkzeug==3.0.4
+wheel==0.44.0
 wrapt==1.16.0
-xxhash @ file:///home/conda/feedstock_root/build_artifacts/python-xxhash_1725272038428/work
-yacs @ file:///home/conda/feedstock_root/build_artifacts/yacs_1645705974477/work
-yarl @ file:///home/conda/feedstock_root/build_artifacts/yarl_1726055110484/work
-zarr @ file:///home/conda/feedstock_root/build_artifacts/zarr_1655999983354/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1726248574750/work
+xxhash==3.5.0
+yacs==0.1.8
+yarl==1.9.4
+zarr==2.12.0
+zipp==3.20.2
