--- a/requirements.txt
+++ b/requirements.txt
@@ -1,227 +1,447 @@
-absl-py==2.1.0
-accelerate==0.13.2
-action_extractor==0.1.0
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiohttp-cors==0.7.0
-aiosignal==1.3.1
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-asciitree==0.3.3
-asttokens==2.4.1
-async-timeout==4.0.3
-attrs==24.2.0
-av==10.0.0
-beautifulsoup4==4.12.3
-blessed==1.20.0
-blinker==1.8.2
-boto3==1.24.96
-botocore==1.27.96
-Brotli==1.0.9
-cached-property==1.5.2
-cachetools==5.5.0
-certifi==2024.8.30
-cffi==1.15.1
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.0.4
-cloudpickle==3.0.0
-colorama==0.4.6
-colorful==0.5.6
-contourpy==1.3.0
-cryptography==42.0.2
-cycler==0.12.1
-Cython==0.29.32
-cytoolz==0.12.3
-dask==2023.10.1
-dataclasses==0.8
-datasets==2.6.1
-debugpy==1.8.5
-decorator==5.1.1
-diffusers==0.11.1
-dill==0.3.5.1
-distlib==0.3.8
-dm-control==1.0.9
-dm-env==1.6
-dm-tree==0.1.8
-docker-pycreds==0.4.0
-egl_probe==1.0.2
-einops==0.4.1
-entrypoints==0.4
-etils==1.5.2
-evdev==1.7.1
-exceptiongroup==1.2.2
-executing==2.1.0
-fasteners==0.15
-filelock==3.16.1
-fonttools==4.54.0
-free-mujoco-py==2.1.6
-frozenlist==1.4.1
-fsspec==2024.9.0
-fvcore==0.1.5.post20221221
-gdown==5.2.0
-gitdb==4.0.11
-GitPython==3.1.43
-glfw==1.12.0
-google-api-core==2.20.0
-google-auth==2.35.0
-google-auth-oauthlib==0.4.6
-googleapis-common-protos==1.63.1
-gpustat==1.1.1
-grpcio==1.46.3
-gym==0.21.0
-h5py==3.7.0
-huggingface_hub==0.25.1
-hydra-core==1.2.0
-idna==3.10
-imagecodecs==2022.9.26
-imageio==2.22.0
-imageio-ffmpeg==0.4.7
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-iopath==0.1.10
-ipykernel==6.16.2
-ipython==8.18.1
-jedi==0.19.1
-jmespath==1.0.1
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.7
-labmaze==1.0.6
-llvmlite==0.36.0
-locket==1.0.0
-lxml==5.3.0
-Markdown==3.6
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mimicgen==1.0.0
-monotonic==1.6
-msgpack==1.1.0
-mujoco==3.2.3
-mujoco-py==2.1.2.14
-multidict==6.1.0
-multiprocess==0.70.14
-munkres==1.1.4
-nest_asyncio==1.6.0
-networkx==3.2.1
-numba==0.53.1
-numcodecs==0.10.2
-numpy==1.23.3
-nvidia-ml-py==12.560.30
-oauthlib==3.2.2
-omegaconf==2.2.3
-opencensus==0.11.4
-opencensus-context==0.1.3
-opencv-python==4.6.0
-packaging==24.1
-pandas==2.2.3
-parameterized==0.9.0
-parso==0.8.4
-partd==1.4.2
-pathtools==0.1.2
-pexpect==4.9.0
-pickleshare==0.7.5
-Pillow==9.2.0
-pip==22.2.2
-platformdirs==4.3.6
-ply==3.11
-portalocker==2.10.1
-prometheus-client==0.13.1
-promise==2.3
-prompt_toolkit==3.0.47
-proto-plus==1.24.0
-protobuf==3.19.6
-psutil==5.9.2
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py-spy==0.3.14
-pyarrow==8.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pybullet-svl==3.1.6.4
-pycparser==2.22
-pydantic==2.9.2
-pydantic_core==2.23.4
-pygame==2.1.2
-Pygments==2.18.0
-PyJWT==2.9.0
-pymunk==6.2.1
-pynput==1.7.7
-PyOpenGL==3.1.7
-pyOpenSSL==24.2.1
-pyparsing==3.1.4
-PyQt5==5.15.7
-PyQt5-sip==12.11.0
-PySocks==1.7.1
-python-dateutil==2.9.0
-python-xlib==0.33
-pytorch3d==0.7.0
-pytorchvideo==0.1.5
-pytz==2024.1
-pyu2f==0.1.5
-PyWavelets==1.6.0
-PyYAML==6.0.2
-pyzmq==26.2.0
-r3m==0.0.0
-ray==2.2.0
-referencing==0.35.1
-regex==2024.9.11
-requests==2.32.3
-requests-oauthlib==2.0.0
-responses==0.18.0
-robomimic==0.2.0
-robosuite==1.4.1
-robosuite_task_zoo==0.1
-rpds-py==0.20.0
-rsa==4.9
-s3transfer==0.6.2
-scikit-image==0.19.3
-scikit-video==1.1.11
-scipy==1.9.1
-seaborn==0.13.2
-sentry-sdk==2.14.0
-setproctitle==1.3.3
-setuptools==74.1.2
-Shapely==1.8.4
-shortuuid==1.0.13
-sip==6.7.12
-six==1.16.0
-smart-open==7.0.4
-smmap==5.0.0
-soupsieve==2.6
-stack-data==0.6.2
-tabulate==0.9.0
-tensorboard==2.10.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorboardX==2.5.1
-termcolor==2.0.1
-threadpoolctl==3.1.0
-tifffile==2022.10.10
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
-torch==1.12.1
-torchvideotransforms==0.1.2
-torchvision==0.13.1
-tornado==6.4.1
-tqdm==4.64.1
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.2
-unicodedata2==15.1.0
-urllib3==1.26.19
-virtualenv==20.26.5
-wandb==0.13.3
-wcwidth==0.2.13
-Werkzeug==3.0.4
-wheel==0.44.0
-wrapt==1.16.0
-xxhash==3.5.0
-yacs==0.1.8
-yarl==1.9.4
-zarr==2.12.0
-zipp==3.20.2
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+# created-by: conda 24.11.3
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=3_kmp_llvm
+abseil-cpp=20211102.0=h93e1e8c_3
+absl-py=2.1.0=pyhd8ed1ab_1
+accelerate=0.13.2=pyhd8ed1ab_0
+aiohappyeyeballs=2.4.0=pyhd8ed1ab_0
+aiohttp=3.10.5=py39h8cd3c5a_1
+aiosignal=1.3.1=pyhd8ed1ab_1
+alsa-lib=1.2.8=h166bdaf_0
+antlr-python-runtime=4.9.3=pyhd8ed1ab_1
+anyio=4.9.0=pyh29332c3_0
+aom=3.5.0=h27087fc_0
+arrow=1.3.0=pyhd8ed1ab_1
+arrow-cpp=8.0.0=py39h60b952e_0
+asciitree=0.3.3=py_2
+asttokens=2.4.1=pyhd8ed1ab_0
+async-timeout=4.0.3=pyhd8ed1ab_0
+attr=2.5.1=h166bdaf_1
+attrs=24.2.0=pyh71513ae_1
+av=10.0.0=py39h169e2ed_0
+aws-c-common=0.6.8=h7f98852_0
+aws-c-event-stream=0.1.6=h6a678d5_6
+aws-checksums=0.1.11=ha492f5f_12
+aws-sdk-cpp=1.8.185=h721c034_1
+binaryornot=0.4.4=pyhd8ed1ab_2
+blas=1.0=mkl
+blinker=1.8.2=pyhd8ed1ab_0
+blosc=1.21.5=h0f2a231_0
+boost-cpp=1.81.0=he95ae9e_0
+boto3=1.24.96=pyhd8ed1ab_0
+botocore=1.27.96=pyhd8ed1ab_0
+brotli=1.0.9=h166bdaf_9
+brotli-bin=1.0.9=h166bdaf_9
+brotli-python=1.0.9=py39h5a03fae_9
+brunsli=0.1=h9c3ff4c_0
+bzip2=1.0.8=h4bc722e_7
+c-ares=1.33.1=heb4867d_0
+c-blosc2=2.12.0=hb4ffafa_0
+ca-certificates=2025.1.31=hbcca054_0
+cached-property=1.5.2=hd8ed1ab_1
+cached_property=1.5.2=pyha770c72_1
+cachetools=5.5.0=pyhd8ed1ab_1
+cairo=1.16.0=ha61ee94_1014
+certifi=2025.1.31=pyhd8ed1ab_0
+cffi=1.15.1=py39h7a31438_5
+cfitsio=4.1.0=hd9d235c_0
+chardet=5.2.0=pyhd8ed1ab_3
+charls=2.3.4=h9c3ff4c_0
+charset-normalizer=3.3.2=pyhd8ed1ab_0
+click=8.0.4=py39hf3d152e_0
+cloudpickle=3.0.0=pyhd8ed1ab_0
+cmake=3.24.3=h816a3e0_0
+colorama=0.4.6=pyhd8ed1ab_1
+comm=0.2.2=pyhd8ed1ab_1
+contourpy=1.3.0=py39h74842e3_2
+cookiecutter=2.6.0=pyhd8ed1ab_1
+cryptography=42.0.2=py39he6105cc_0
+cudatoolkit=11.6.0=habf752d_9
+cycler=0.12.1=pyhd8ed1ab_1
+cython=0.29.32=py39h5a03fae_1
+cytoolz=0.12.3=py39hd1e30aa_0
+dask-core=2023.10.1=pyhd8ed1ab_0
+dataclasses=0.8=pyhc8e2a94_3
+datasets=2.6.1=pyhd8ed1ab_0
+dav1d=1.0.0=h166bdaf_1
+dbus=1.13.6=h5008d03_3
+debugpy=1.8.5=py39hf88036b_1
+decorator=5.1.1=pyhd8ed1ab_1
+diffusers=0.11.1=pyhd8ed1ab_0
+dill=0.3.5.1=pyhd8ed1ab_0
+docker-pycreds=0.4.0=py_0
+einops=0.4.1=pyhd8ed1ab_0
+elfutils=0.189=hde5d1a3_0
+entrypoints=0.4=pyhd8ed1ab_1
+exceptiongroup=1.2.2=pyhd8ed1ab_1
+executing=2.1.0=pyhd8ed1ab_1
+expat=2.6.3=h5888daf_0
+fasteners=0.19=pyhd8ed1ab_1
+ffmpeg=4.4.2=gpl_h8dda1f0_112
+fftw=3.3.10=nompi_hf1063bd_110
+filelock=3.16.1=pyhd8ed1ab_1
+font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=h77eed37_3
+fontconfig=2.14.2=h14ed4e7_0
+fonts-conda-ecosystem=1=0
+fonts-conda-forge=1=0
+fonttools=4.54.0=py39h8cd3c5a_0
+freeglut=3.2.2=h9c3ff4c_1
+freetype=2.12.1=h267a509_2
+frozenlist=1.4.1=py39h8cd3c5a_1
+fsspec=2024.9.0=pyhff2d567_0
+fvcore=0.1.5.post20221221=pyhd8ed1ab_0
+geos=3.11.0=h27087fc_0
+gettext=0.22.5=he02047a_3
+gettext-tools=0.22.5=he02047a_3
+gflags=2.2.2=h5888daf_1005
+giflib=5.2.2=hd590300_0
+gitdb=4.0.11=pyhd8ed1ab_1
+gitpython=3.1.43=pyhff2d567_1
+glew=2.1.0=h9c3ff4c_2
+glfw3=3.2.1=0
+glib=2.80.2=hf974151_0
+glib-tools=2.80.2=hb6ce0ca_0
+glog=0.7.1=hbabe93e_0
+gmp=6.3.0=hac33072_2
+gnutls=3.7.9=hb077bed_0
+google-auth=2.35.0=pyhff2d567_0
+google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
+graphite2=1.3.13=h59595ed_1003
+grpc-cpp=1.46.3=h0b91f02_1
+grpcio=1.46.3=py39h9b22b9d_1
+gst-plugins-base=1.21.3=h4243ec0_1
+gstreamer=1.21.3=h25f0c4b_1
+gstreamer-orc=0.4.40=hb9d3cd8_0
+gym=0.21.0=py39hef51801_2
+h11=0.14.0=pyhd8ed1ab_1
+h5py=3.7.0=nompi_py39h817c9c5_102
+harfbuzz=5.3.0=h418a68e_0
+hdf5=1.12.2=nompi_h4df4325_101
+huggingface_hub=0.25.1=pyhd8ed1ab_0
+humanize=4.12.1=pyhd8ed1ab_0
+hydra-core=1.2.0=pyhd8ed1ab_0
+icu=70.1=h27087fc_0
+idna=3.10=pyhd8ed1ab_1
+imagecodecs=2022.9.26=py39hf586f7a_0
+imageio=2.22.0=pyhfa7a67d_0
+imageio-ffmpeg=0.4.7=pyhd8ed1ab_0
+importlib-metadata=8.5.0=pyha770c72_1
+importlib-resources=6.4.5=pyhd8ed1ab_1
+importlib_metadata=8.5.0=hd8ed1ab_1
+importlib_resources=6.4.5=pyhd8ed1ab_1
+intel-openmp=2022.1.0=h9e868ea_3769
+iopath=0.1.10=pyhd8ed1ab_0
+ipykernel=6.16.2=pyh210e3f2_0
+ipython=8.18.1=pyh707e725_3
+ipyvue=1.11.2=pyhd8ed1ab_0
+ipyvuetify=1.11.0=pyhd8ed1ab_0
+ipywidgets=8.1.5=pyhd8ed1ab_1
+jack=1.9.22=h11f4161_0
+jasper=2.0.33=h0ff4b12_1
+jedi=0.19.1=pyhd8ed1ab_0
+jinja2=3.1.6=pyhd8ed1ab_0
+jmespath=1.0.1=pyhd8ed1ab_1
+jpeg=9e=h0b41bf4_3
+jsonschema=4.23.0=pyhd8ed1ab_1
+jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
+jupyter_client=8.6.3=pyhd8ed1ab_1
+jupyter_core=5.7.2=pyh31011fe_1
+jupyterlab_widgets=3.0.13=pyhd8ed1ab_1
+jxrlib=1.1=hd590300_3
+keyutils=1.6.1=h166bdaf_0
+kiwisolver=1.4.7=py39h74842e3_0
+krb5=1.20.1=h81ceb04_0
+lame=3.100=h166bdaf_1003
+lcms2=2.14=h6ed2654_0
+ld_impl_linux-64=2.43=h712a8e2_4
+lerc=4.0.0=h27087fc_0
+libabseil=20211102.0=cxx17_h48a1fff_3
+libaec=1.1.3=h59595ed_0
+libarchive=3.6.2=h3d51595_0
+libasprintf=0.22.5=he8f35ee_3
+libasprintf-devel=0.22.5=he8f35ee_3
+libavif=0.10.1=h5cdd6b5_2
+libblas=3.9.0=16_linux64_mkl
+libbrotlicommon=1.0.9=h166bdaf_9
+libbrotlidec=1.0.9=h166bdaf_9
+libbrotlienc=1.0.9=h166bdaf_9
+libcap=2.67=he9d0100_0
+libcblas=3.9.0=16_linux64_mkl
+libclang=15.0.7=default_h127d8a8_5
+libclang13=15.0.7=default_h5d6823c_5
+libcups=2.3.3=h36d4200_3
+libcurl=8.1.2=h409715c_0
+libdb=6.2.32=h9c3ff4c_0
+libdeflate=1.14=h166bdaf_0
+libdrm=2.4.123=hb9d3cd8_0
+libedit=3.1.20191231=he28a2e2_2
+libev=4.33=hd590300_2
+libevent=2.1.10=h28343ad_4
+libexpat=2.6.3=h5888daf_0
+libffi=3.4.2=h7f98852_5
+libflac=1.4.3=h59595ed_0
+libgcc=14.1.0=h77fa898_1
+libgcc-ng=14.1.0=h69a702a_1
+libgcrypt=1.11.0=h4ab18f5_1
+libgettextpo=0.22.5=he02047a_3
+libgettextpo-devel=0.22.5=he02047a_3
+libgfortran=14.1.0=h69a702a_1
+libgfortran-ng=14.1.0=h69a702a_1
+libgfortran5=14.1.0=hc5f4f2c_1
+libglib=2.80.2=hf974151_0
+libglu=9.0.0=he1b5a44_1001
+libgomp=14.1.0=h77fa898_1
+libgpg-error=1.50=h4f305b6_0
+libhwloc=2.9.1=hd6dc26d_0
+libiconv=1.17=hd590300_2
+libidn2=2.3.7=hd590300_0
+liblapack=3.9.0=16_linux64_mkl
+liblapacke=3.9.0=16_linux64_mkl
+libllvm11=11.1.0=he0ac6c6_5
+libllvm15=15.0.7=hadd5161_1
+libllvm16=16.0.1=hadd5161_0
+liblzma=5.6.4=hb9d3cd8_0
+libmicrohttpd=0.9.77=h97afed2_0
+libnghttp2=1.58.0=h47da74e_0
+libnsl=2.0.1=hd590300_0
+libogg=1.3.5=h4ab18f5_0
+libopencv=4.6.0=py39h5ca1638_3
+libopus=1.3.1=h7f98852_1
+libpciaccess=0.18=hd590300_0
+libpng=1.6.43=h2797004_0
+libpq=15.3=hbcd7760_1
+libprotobuf=3.20.1=h6239696_4
+libsndfile=1.2.2=hc60ed4a_1
+libsodium=1.0.18=h36c2ea0_1
+libsqlite=3.46.0=hde9e2c9_0
+libssh2=1.11.0=h0841786_0
+libstdcxx=14.1.0=hc0a3c3a_1
+libstdcxx-ng=14.1.0=h4852527_1
+libsystemd0=253=h8c4010b_1
+libtasn1=4.19.0=h166bdaf_0
+libthrift=0.15.0=h362ad58_1
+libtiff=4.4.0=h82bc61c_5
+libtool=2.4.7=he02047a_1
+libudev1=253=h0b41bf4_1
+libunistring=0.9.10=h14c3975_0
+libuuid=2.38.1=h0b41bf4_0
+libuv=1.48.0=hd590300_0
+libva=2.18.0=h0b41bf4_0
+libvorbis=1.3.7=he1b5a44_0
+libvpx=1.11.0=h9c3ff4c_3
+libwebp-base=1.4.0=hd590300_0
+libxcb=1.13=h7f98852_1004
+libxcrypt=4.4.36=hd590300_1
+libxkbcommon=1.5.0=h79f4944_1
+libxml2=2.10.3=hca2bb57_4
+libzlib=1.2.13=h4ab18f5_6
+libzopfli=1.0.3=h9c3ff4c_0
+llvm-openmp=14.0.6=he0ac6c6_0
+locket=1.0.0=pyhd8ed1ab_0
+lz4-c=1.9.4=hcb278e6_0
+lzo=2.10=hd590300_1001
+markdown=3.6=pyhd8ed1ab_0
+markdown-it-py=3.0.0=pyhd8ed1ab_1
+markupsafe=2.1.5=py39h8cd3c5a_1
+matplotlib-base=3.9.4=py39h16632d1_0
+matplotlib-inline=0.1.7=pyhd8ed1ab_1
+mdurl=0.1.2=pyhd8ed1ab_1
+mesa=2.4.0=pyhd8ed1ab_0
+mesa-viz-tornado=0.1.3=pyhd8ed1ab_0
+mesalib=23.0.2=h3855f93_0
+mkl=2022.1.0=h84fe81f_915
+mpg123=1.32.6=h59595ed_0
+msgpack-python=1.1.0=py39h74842e3_0
+multidict=6.1.0=py39h9399b63_2
+multiprocess=0.70.14=py39hb9d737c_2
+munkres=1.1.4=pyh9f0ad1d_0
+mysql-common=8.0.33=hf1915f5_6
+mysql-libs=8.0.33=hca2cd23_6
+nbformat=5.10.4=pyhd8ed1ab_1
+ncurses=6.5=h2d0b736_3
+nest-asyncio=1.6.0=pyhd8ed1ab_1
+nettle=3.9.1=h7ab15ed_0
+networkx=3.2.1=pyhd8ed1ab_0
+nspr=4.35=h27087fc_0
+nss=3.100=hca3bf56_0
+numcodecs=0.10.2=py39h5a03fae_0
+numpy=1.23.3=py39hba7629e_0
+oauthlib=3.2.2=pyhd8ed1ab_1
+omegaconf=2.2.3=pyhd8ed1ab_0
+openh264=2.3.1=hcb278e6_2
+openjpeg=2.5.0=h7d73246_1
+openssl=3.1.8=h7b32b05_0
+orc=1.7.4=h6c59b99_1
+p11-kit=0.24.1=hc5aa10d_0
+packaging=24.1=pyhd8ed1ab_0
+pandas=2.2.3=py39h3b40f6f_1
+parso=0.8.4=pyhd8ed1ab_1
+partd=1.4.2=pyhd8ed1ab_0
+patchelf=0.17.2=h58526e2_0
+pathtools=0.1.2=py_1
+pcre2=10.43=hcad00b1_0
+pexpect=4.9.0=pyhd8ed1ab_1
+pickleshare=0.7.5=pyhd8ed1ab_1004
+pillow=9.2.0=py39hf3a2cdf_3
+pip=22.2.2=pyhd8ed1ab_0
+pixman=0.43.2=h59595ed_0
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
+platformdirs=4.3.6=pyhd8ed1ab_1
+ply=3.11=pyhd8ed1ab_3
+portalocker=2.10.1=py39hf3d152e_1
+promise=2.3=py39hf3d152e_9
+prompt-toolkit=3.0.47=pyha770c72_0
+protobuf=3.20.1=py39h5a03fae_0
+psutil=5.9.2=py39hb9d737c_0
+pthread-stubs=0.4=hb9d3cd8_1002
+ptyprocess=0.7.0=pyhd8ed1ab_1
+pulseaudio=16.1=hcb278e6_3
+pulseaudio-client=16.1=h5195f5e_3
+pulseaudio-daemon=16.1=ha8d29e2_3
+pure_eval=0.2.3=pyhd8ed1ab_1
+py-opencv=4.6.0=py39hef51801_3
+pyarrow=8.0.0=py39h992f0b0_0
+pyasn1=0.6.1=pyhd8ed1ab_2
+pyasn1-modules=0.4.1=pyhd8ed1ab_1
+pycparser=2.22=pyh29332c3_1
+pygments=2.18.0=pyhd8ed1ab_1
+pyjwt=2.9.0=pyhd8ed1ab_1
+pymdown-extensions=10.14.3=pyhd8ed1ab_0
+pymunk=6.2.1=py39hb9d737c_3
+pyopenssl=24.2.1=pyhd8ed1ab_2
+pyparsing=3.1.4=pyhd8ed1ab_0
+pyqt=5.15.7=py39h5c7b992_3
+pyqt5-sip=12.11.0=py39h227be39_3
+pysocks=1.7.1=pyha55dd90_7
+python=3.9.18=h0755675_0_cpython
+python-dateutil=2.9.0.post0=pyhff2d567_1
+python-fastjsonschema=2.21.1=pyhd8ed1ab_0
+python-slugify=8.0.4=pyhd8ed1ab_1
+python-tzdata=2024.2=pyhd8ed1ab_1
+python-xxhash=3.5.0=py39h8cd3c5a_1
+python_abi=3.9=5_cp39
+pytorch=1.12.1=py3.9_cuda11.6_cudnn8.3.2_0
+pytorch-mutex=1.0=cuda
+pytorch3d=0.7.5=py39_cu116_pyt1121
+pytz=2024.1=pyhd8ed1ab_0
+pyu2f=0.1.5=pyhd8ed1ab_1
+pywavelets=1.6.0=py39hd92a3bb_0
+pyyaml=6.0.2=py39h9399b63_2
+pyzmq=26.2.0=py39h4e4fb57_1
+qhull=2020.2=h434a139_5
+qt-main=5.15.6=hf6cd601_5
+re2=2022.04.01=h27087fc_0
+reacton=1.9.1=pyhd8ed1ab_1
+readline=8.2=h8c095d6_2
+referencing=0.36.2=pyh29332c3_0
+regex=2024.9.11=py39h8cd3c5a_0
+requests=2.32.3=pyhd8ed1ab_1
+requests-oauthlib=2.0.0=pyhd8ed1ab_1
+responses=0.18.0=pyhd8ed1ab_0
+rhash=1.4.3=hd590300_2
+rich=13.9.4=pyhd8ed1ab_1
+rich-click=1.8.8=pyhd8ed1ab_0
+rpds-py=0.23.1=py39h3506688_0
+rsa=4.9=pyhd8ed1ab_1
+s3transfer=0.6.2=pyhd8ed1ab_0
+scikit-image=0.19.3=py39h4661b88_2
+scikit-video=1.1.11=pyh24bf2e0_0
+scipy=1.9.1=py39h8ba3f38_0
+sentry-sdk=2.14.0=pyhd8ed1ab_0
+setproctitle=1.3.3=py39h8cd3c5a_1
+setuptools=74.1.2=pyhd8ed1ab_0
+shapely=1.8.4=py39h68ae834_0
+shortuuid=1.0.13=pyhd8ed1ab_1
+sip=6.7.12=py39h3d6467e_0
+six=1.16.0=pyhd8ed1ab_1
+smmap=5.0.0=pyhd8ed1ab_0
+snappy=1.1.10=hdb0a2a9_1
+sniffio=1.3.1=pyhd8ed1ab_1
+solara=1.44.1=pyhd8ed1ab_0
+solara-server=1.44.1=pyhd8ed1ab_0
+solara-ui=1.44.1=pyhd8ed1ab_0
+stack_data=0.6.2=pyhd8ed1ab_0
+starlette=0.46.1=pyha770c72_0
+svt-av1=1.4.1=hcb278e6_0
+tabulate=0.9.0=pyhd8ed1ab_2
+tbb=2021.9.0=hf52228f_0
+tensorboard=2.10.1=pyhd8ed1ab_0
+tensorboard-data-server=0.6.1=py39h3ccb8fc_4
+tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
+tensorboardx=2.5.1=pyhd8ed1ab_0
+termcolor=2.0.1=pyhd8ed1ab_1
+text-unidecode=1.3=pyhd8ed1ab_2
+threadpoolctl=3.1.0=pyh8a188c0_0
+tifffile=2022.10.10=pyhd8ed1ab_0
+tk=8.6.13=noxft_h4845f30_101
+toml=0.10.2=pyhd8ed1ab_1
+tomli=2.0.1=pyhd8ed1ab_0
+toolz=0.12.1=pyhd8ed1ab_0
+torchvision=0.13.1=py39_cu116
+tornado=6.4.1=py39h8cd3c5a_1
+tqdm=4.64.1=pyhd8ed1ab_0
+traitlets=5.14.3=pyhd8ed1ab_1
+types-python-dateutil=2.9.0.20241206=pyhd8ed1ab_0
+typing-extensions=4.12.2=hd8ed1ab_1
+typing_extensions=4.12.2=pyha770c72_1
+tzdata=2024a=h8827d51_1
+unicodedata2=15.1.0=py39h8cd3c5a_1
+urllib3=1.26.19=pyhd8ed1ab_0
+utf8proc=2.6.1=h5eee18b_1
+uvicorn=0.34.0=pyh31011fe_0
+wandb=0.13.3=pyhd8ed1ab_0
+watchdog=6.0.0=py39hf3d152e_0
+watchfiles=1.0.4=py39he612d8f_0
+wcwidth=0.2.13=pyhd8ed1ab_1
+websockets=15.0.1=py39h8cd3c5a_0
+werkzeug=3.0.4=pyhd8ed1ab_0
+wheel=0.44.0=pyhd8ed1ab_0
+widgetsnbextension=4.0.13=pyhd8ed1ab_1
+x264=1!164.3095=h166bdaf_2
+x265=3.5=h924138e_3
+xcb-util=0.4.0=h516909a_0
+xcb-util-image=0.4.0=h166bdaf_0
+xcb-util-keysyms=0.4.0=h516909a_0
+xcb-util-renderutil=0.3.9=h166bdaf_0
+xcb-util-wm=0.4.1=h516909a_0
+xkeyboard-config=2.38=h0b41bf4_0
+xorg-damageproto=1.2.1=hb9d3cd8_1003
+xorg-fixesproto=5.0=hb9d3cd8_1003
+xorg-glproto=1.4.17=hb9d3cd8_1003
+xorg-inputproto=2.3.2=hb9d3cd8_1003
+xorg-kbproto=1.0.7=hb9d3cd8_1003
+xorg-libice=1.1.1=hb9d3cd8_1
+xorg-libsm=1.2.4=he73a12e_1
+xorg-libx11=1.8.4=h0b41bf4_0
+xorg-libxau=1.0.11=hb9d3cd8_1
+xorg-libxdamage=1.1.5=h7f98852_1
+xorg-libxdmcp=1.1.3=hb9d3cd8_2
+xorg-libxext=1.3.4=h0b41bf4_2
+xorg-libxfixes=5.0.3=h7f98852_1004
+xorg-libxi=1.7.10=h7f98852_0
+xorg-libxrandr=1.5.2=h7f98852_1
+xorg-libxrender=0.9.10=h7f98852_1003
+xorg-randrproto=1.5.0=hb9d3cd8_1002
+xorg-renderproto=0.11.1=hb9d3cd8_1003
+xorg-util-macros=1.20.1=hb9d3cd8_0
+xorg-xextproto=7.3.0=hb9d3cd8_1004
+xorg-xf86vidmodeproto=2.3.1=hb9d3cd8_1005
+xorg-xproto=7.0.31=hb9d3cd8_1008
+xxhash=0.8.2=hd590300_0
+xz=5.2.6=h166bdaf_0
+yacs=0.1.8=pyh29332c3_2
+yaml=0.2.5=h7f98852_2
+yarl=1.9.4=py39h8cd3c5a_1
+zarr=2.12.0=pyhd8ed1ab_0
+zeromq=4.3.5=h59595ed_1
+zfp=1.0.1=h5888daf_2
+zipp=3.20.2=pyhd8ed1ab_0
+zlib=1.2.13=h4ab18f5_6
+zlib-ng=2.0.7=h0b41bf4_0
+zstd=1.5.6=ha6fb4c9_0
