experiment config files

--- a/diffusion_policy/config/stack_unet.yaml
+++ b/diffusion_policy/config/stack_unet.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - task: square_image_abs
+  - task: stack_image_abs
 
 name: train_diffusion_unet_image
 _target_: diffusion_policy.workspace.train_diffusion_unet_image_workspace.TrainDiffusionUnetImageWorkspace
